# solana-dApp-vote

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package.json  pollisol.json
app/: next.config.js  package-lock.json  package.json
app/components/: BackButton.js  Header.js  ResumeProposal.js  ViewProposal.js
app/context/: context.js
app/pages/: _app.js  index.js
app/pages/choice/: add.js  index.js
app/pages/proposal/: [id].js  create.js  index.js
app/pages/voter/: add.js  index.js
app/styles/: BackButton.module.css  DetailProposal.module.css  Header.module.css  Home.module.css  Proposal.module.css  ResumeProposal.module.css  ViewProposals.module.css  ViewVotes.module.css  Vote.module.css  globals.css
app/utils/: constants.js  helper.js  idl.json  program.js
d-app/: Cargo.toml  README.md  index.css  index.html
d-app/src/: main.rs
d-app/src/components/: home_page.rs  login.rs  mod.rs  proposal_form.rs  proposals_list.rs
d-app/src/context/: wallet_context.rs
d-app/src/state/: ballot.rs  proposal.rs
d-app/src/utils/: bytes_to_string.rs  mod.rs  string_to_array_u8_16.rs  string_to_u8_32_array.rs
programs/solana-dapp-vote/: Cargo.toml
programs/solana-dapp-vote/src/: constants.rs  errors.rs  lib.rs
programs/solana-dapp-vote/src/instructions/: add_choice_for_one_proposal.rs  cast_vote.rs  create_proposal.rs  register_voter.rs
programs/solana-dapp-vote/src/state/: ballot.rs  mod.rs  (+1 more)
programs/solana_dapp_vote/: Cargo.toml
programs/solana_dapp_vote/src/: constants.rs  lib.rs
tests/: solana-dapp-vote.test.ts  solana-dapp-vote.ts
(+4 files in other folders)
