[package]
name = "PolliSol"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
log = "0.4.21"
wasi-sol = { git = "https://github.com/GigaDAO/wasi-sol", features = ["yew"] }
wasm-logger = "0.2.0"
web-sys = "0.3.69"
yew = { version = "0.21.0", features = ["csr"] }
# { git = "https://github.com/rust-lang/regex.git" }
